# HMS_WITH_RUST

./: .env  Cargo.toml
src/: auth.rs  main.rs  models.rs
src/routes/: auth.rs  hospital.rs
